--- a/app.json
+++ b/app.json
@@ -173,17 +173,11 @@
     },
     {
       "as": "DATABASE",
-      "plan": "heroku-postgresql:hobby-dev",
-      "options": {
-        "version": "12"
-      }
+      "plan": "heroku-postgresql:essential-0"
     },
     {
       "as": "REDIS",
-      "plan": "heroku-redis:hobby-dev",
-      "options": {
-        "version": "6"
-      }
+      "plan": "heroku-redis:premium-0"
     }
   ],
   "buildpacks": [
